--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
+    <form id="new-contact-form"></form>
     <div id="contacts-container"></div>
     <script src="./index.js"></script>
   </body>
