all functionalities working and all required inputs accounted for.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <input type="text" id="search-bar" name="search-bar" />
     <form id="new-contact-form" method="post"></form>
     <label for="first-name">Enter First Name</label>
-    <input type="text" id="first-name" name="first-name" />
+    <input type="text" id="first-name" />
+    <label for="last-name">Enter Last Name</label>
+    <input type="text" id="last-name" />
+    <label for="phone-number">Enter Phone Number</label>
+    <input type="text" id="phone-number" />
     <label for="address">Enter Address</label>
     <input type="text" id="address" />
     <button type="button" onclick="addContact()">Add Contact</button>
