--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <button type="search-bar" onclick="deleteContact()">Search</button>
+    <button type="search-bar">Search</button>
     <input type="text" id="search-bar" name="search-bar" />
     <form id="new-contact-form" method="post"></form>
     <label for="first-name">Enter First Name</label>
