add, search, jquery, styled. Cannot delete properly

--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Book</title>
+    <title>Seth Platt's Contact Book</title>
     <link rel="stylesheet" href="index.css" />
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+      integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <h1 id="title">Contact Book</h1>
-    <label type="search-bar" id="search-label">Search Contacts:</label>
+    <h1 id="title"></h1>
+    <label type="search-bar" id="search-label"></label>
     <input type="text" id="search-bar" name="search-bar" />
     <form id="new-contact-form" method="post">Add A New Contact</form>
     <input
