--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       id="first-name"
       class="input-box"
       placeholder="Enter First Name"
+      required
     />
     <input
       type="text"
