input fields cleared when new contact is added

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
       class="input-box"
       placeholder="Enter Address"
     />
-    <button type="button" id="add-button" onclick="addContact()">
+    <button type="button" id="add-button" onclick="addContact()" type="reset">
       Add Contact
     </button>
 
