add contact changed to button, can tabkey to it now

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
       placeholder="Enter Address"
     />
     <br />
-    <div id="add-button" onclick="addContact()">Add Contact</div>
+    <button id="add-button" onclick="addContact()">Add Contact</button>
     <br />
     <input
       type="text"
